[gd_scene load_steps=7 format=3 uid="uid://dtwm5gj2hvijf"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_tgcph"]
[ext_resource type="Texture2D" uid="uid://b4g18jrqxbjuu" path="res://Assets/Fantasy/Background/Grass field.png" id="2_pgfqp"]
[ext_resource type="PackedScene" uid="uid://dtwm5gj2hvijf" path="res://Scenes/Levels/Level1.tscn" id="2_qqmm6"]
[ext_resource type="FontFile" uid="uid://ycaiqwy2b78f" path="res://Assets/SpaceMono-Regular.ttf" id="3_7chxd"]

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3_7chxd")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3_7chxd")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_tgcph")
level1_scene = ExtResource("2_qqmm6")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(270, 488)
scale = Vector2(0.796323, 0.796323)
texture = ExtResource("2_pgfqp")
region_enabled = true
region_rect = Rect2(0, 0, 783.623, 1269.55)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartScreen" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/StartScreen/CenterContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 1
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
theme_override_constants/separation = 50
alignment = 0
script = null

[node name="Title" type="Label" parent="CanvasLayer/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Русы против ящеров на клавиатуре"
horizontal_alignment = 1

[node name="ChooseLanguage" type="Label" parent="CanvasLayer/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Выберите язык"
horizontal_alignment = 1

[node name="ChooseRussian" type="Button" parent="CanvasLayer/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "Русский"

[node name="ChooseEnglish" type="Button" parent="CanvasLayer/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "English"

[connection signal="pressed" from="CanvasLayer/StartScreen/CenterContainer/VBoxContainer/ChooseRussian" to="." method="_on_ChooseRussian_pressed"]
[connection signal="pressed" from="CanvasLayer/StartScreen/CenterContainer/VBoxContainer/ChooseEnglish" to="." method="_on_ChooseEnglish_pressed"]
